--- a/backend_Expressjs/package.json
+++ b/backend_Expressjs/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-rate-limit": "^7.4.1",
