--- a/backend_Expressjs/Dockerfile
+++ b/backend_Expressjs/Dockerfile
@@ -10,4 +10,9 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "run", "start"]
+# สร้าง entrypoint script สำหรับรันคำสั่งเพิ่มเติม
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+# รัน entrypoint script เมื่อเริ่ม Container
+ENTRYPOINT ["entrypoint.sh"]
